--- a/log.html
+++ b/log.html
@@ -6,8 +6,8 @@
     <style>
       body {
         width: 600px;
-        background-color: rgb(228, 228, 228);
-        color: rgba(0, 0, 0, 0.446);
+        background-color: rgb(231, 231, 231);
+        color: rgba(0, 0, 0, 0.692);
         margin: auto;
       }
     </style>
@@ -15,20 +15,20 @@
   <body>
     <header>
       <pre>
-eszesbalint.github.io/log.html
+
+          _                       _       _                 _ 
+          | |                     | |     | |               | |
+          | |   ___     __ _      | |__   | |_   _ __ ___   | |
+          | |  / _ \   / _` |     | '_ \  | __| | '_ ` _ \  | |
+          | | | (_) | | (_| |  _  | | | | | |_  | | | | | | | |
+          |_|  \___/   \__, | (_) |_| |_|  \__| |_| |_| |_| |_|
+                        __/ |                                  
+                       |___/                                   
       </pre>
     </header>
     <main>
       <pre>
-2021 04 02 --------------------------------------------------------------------
-           _                       _       _                 _ 
-           | |                     | |     | |               | |
-           | |   ___     __ _      | |__   | |_   _ __ ___   | |
-           | |  / _ \   / _` |     | '_ \  | __| | '_ ` _ \  | |
-           | | | (_) | | (_| |  _  | | | | | |_  | | | | | | | |
-           |_|  \___/   \__, | (_) |_| |_|  \__| |_| |_| |_| |_|
-                         __/ |                                  
-                        |___/                                   
+2021 04 02 ████████████████████████████████████████████████████████████████████
 
     Támadt egy olyan remek ötletem, hogy elkezdek naplót írni. Ez ugye 
 hagyományosan úgy nézne ki, hogy fogok egy üres spirálfüzetet az
@@ -57,8 +57,13 @@ megvolt.
 egyszerűségnek. Egy statikus HTML oldal, ami .txt fájlnak hazudja magát, de
 időnként nem riad meg attól sem, ha képet kell illeszteni két szövegblokk közé. 
 
+U.i.: Nem, nem érdekel, hogy okostelefonon kilóg a szöveg.
       </pre>
     </main>
-    <footer></footer>
+    <footer>
+      <pre>
+        
+      </pre>
+    </footer>
   </body>
 </html>
