--- a/log.html
+++ b/log.html
@@ -30,6 +30,25 @@
       <pre>
 2021 04 02 ████████████████████████████████████████████████████████████████████
 
+                    "Nincs más út, csak a rendeződés."
+                                      - délgörög bölcsesség 
+
+               ^^                   @@@@@@@@@
+          ^^       ^^            @@@@@@@@@@@@@@@
+                               @@@@@@@@@@@@@@@@@@              ^^
+                              @@@@@@@@@@@@@@@@@@@@
+    ~~~~ ~~ ~~~~~ ~~~~~~~~ ~~ &&&&&&&&&&&&&&&&&&&& ~~~~~~~ ~~~~~~~~~~~ ~~~
+    ~         ~~   ~  ~       ~~~~~~~~~~~~~~~~~~~~ ~       ~~     ~~ ~
+      ~      ~~      ~~ ~~ ~~  ~~~~~~~~~~~~~ ~~~~  ~     ~~~    ~ ~~~  ~ ~~ 
+      ~  ~~     ~         ~      ~~~~~~  ~~ ~~~       ~~ ~ ~~  ~~ ~ 
+    ~  ~       ~ ~      ~           ~~ ~~~~~~  ~      ~~  ~             ~~
+          ~             ~        ~      ~      ~~   ~             ~
+    Örülök hogy jobban vagy. Örülök én jobban vagyok. Örülök, hogy van erőd
+ahhoz, hogy megvalósítsd az álmaidat, hogy teszel azért, hogy neked jobb
+legyen. Már nem aggódom érted. Már nem aggódom magamért.
+
+2021 04 02 ████████████████████████████████████████████████████████████████████
+
     Támadt egy olyan remek ötletem, hogy elkezdek naplót írni. Ez ugye 
 hagyományosan úgy nézne ki, hogy fogok egy üres spirálfüzetet az
 általános iskolásak közül, amelyik hátuljában még van pár üres oldal, és
@@ -56,8 +75,7 @@ megvolt.
     Személyes blogom legyen oltára, a maga puritánságával, ennek az 
 egyszerűségnek. Egy statikus HTML oldal, ami .txt fájlnak hazudja magát, de
 időnként nem riad meg attól sem, ha képet kell illeszteni két szövegblokk közé. 
-
-U.i.: Nem, nem érdekel, hogy okostelefonon kilóg a szöveg.
+Egy digitális megfelelője a firka füzetemnek. 
       </pre>
     </main>
     <footer>
