--- a/log.html
+++ b/log.html
@@ -43,8 +43,8 @@
       ~  ~~     ~         ~      ~~~~~~  ~~ ~~~       ~~ ~ ~~  ~~ ~ 
     ~  ~       ~ ~      ~           ~~ ~~~~~~  ~      ~~  ~             ~~
           ~             ~        ~      ~      ~~   ~             ~
-    Örülök hogy jobban vagy. Örülök én jobban vagyok. Örülök, hogy van erőd
-ahhoz, hogy megvalósítsd az álmaidat, hogy teszel azért, hogy neked jobb
+    Örülök, hogy jobban vagy. Örülök, hogy én jobban vagyok. Örülök, hogy van 
+erőd ahhoz, hogy megvalósítsd az álmaidat, hogy teszel azért, hogy neked jobb
 legyen. Már nem aggódom érted. Már nem aggódom magamért.
 
 2021 04 02 ████████████████████████████████████████████████████████████████████
