--- a/log.html
+++ b/log.html
@@ -16,18 +16,89 @@
     <header>
       <pre>
 
-          _                       _       _                 _ 
-          | |                     | |     | |               | |
-          | |   ___     __ _      | |__   | |_   _ __ ___   | |
-          | |  / _ \   / _` |     | '_ \  | __| | '_ ` _ \  | |
-          | | | (_) | | (_| |  _  | | | | | |_  | | | | | | | |
-          |_|  \___/   \__, | (_) |_| |_|  \__| |_| |_| |_| |_|
-                        __/ |                                  
-                       |___/                                   
+   _                       _       _                 _ 
+  | |                     | |     | |               | |
+  | |   ___     __ _      | |__   | |_   _ __ ___   | |
+  | |  / _ \   / _` |     | '_ \  | __| | '_ ` _ \  | |
+  | | | (_) | | (_| |  _  | | | | | |_  | | | | | | | |
+  |_|  \___/   \__, | (_) |_| |_|  \__| |_| |_| |_| |_|
+                __/ |                                  
+               |___/                                   
       </pre>
     </header>
     <main>
       <pre>
+2021 04 03 ████████████████████████████████████████████████████████████████████
+
+Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
+
+   _____________________              Digitális Minimalizmus
+  /                 `   \             
+  |  .-----------.  |   |-----.           Egy technológia használati filozófia,    
+  |  |           |  |   |-=---|       melyben az online töltött idődet kevés,  
+  |  |  MINIMAL  |  |   |-----|       gondosan kiválasztott és optimalizált    
+  |  |           |  |   |-----|       tevékenységgel hasznosítod, olyanokkal             
+  |  |           |  |   |-----|       melyek általad fontosnak vélt értékeket 
+  |  `-----------'  |   |-----'/\     támogatnak, és aztán boldogan lemondasz 
+   \________________/___'     /  \    minden másról.
+      /                      / / /
+     / //               //  / / /         Az úgynevezett digitális minimalisták
+    /                      / / /      folyamatosan költség-haszon elemzéseket 
+   / _/_/_/_/_/_/_/_/_/_/ /   /       végeznek. Ha egy technológia nem kínál 
+  / _/_/_/_/_/_/_/_/_/_/ /   /        többet apró kitérőnél vagy triviális 
+ / _/_/_/_______/_/_/_/ / __/         kényelmi funkciónál, akkor a minimalisták
+/______________________/ /            azt figyelmen kívül hagyják. Még ha az az
+\______________________\/             adott új technológia valami olyasmit is
+                                      támogat, melyet a minimalista nagyra 
+                                      értékel, akkor is át kell mennie egy
+                                      mégszigorúbb teszten.
+   
+    Ez a legjobb módja annak, hogy ezt az értéket támogassam? Nemleges
+válasz esetén a minimalista megpróbálja tovább optimalizálni azt, ahogy az
+adott technológiát használja, vagy keres egy másikat.
+
+    A minimalisták legbenső értékrendjükből indulnak ki, mikor technológia
+használati döntéseiket hozzák, ezáltal ezeket a technológiákat képesek zavaró 
+tényezőkből az életükhöz hasznos eszközökké szelídíteni, így megtörve a 
+sokakat érintő, képernyőfüggőség felé vezető utat.
+
+   Megfigyelhető, hogy ez a filozófia szöges ellentéte a maximalizmusnak, amit
+a legtöbb ember alapból alkalmaz, hogy bármilyen minimális előny vagy 
+hasznosság elég ahhoz, hogy elkezdj használni egy - a figyelmet elterelő -
+technológiát. A maximalisták számára rendkívül kényelmetlen belegondolni abba,
+hogy kihagyjanak valamit, ami legalább egy kicsit is érdekes vagy hasznos.
+Valóban, mikor először elkezdtem írni, publikálni arról, hogy sosem használtam
+még a Facebookot, kollégáim, szakmabeliek meg voltak döbbenve, pontosan ezért.
+"Miért kéne használnom?" - tettem fel a kérdést. "Nem tudom pontosan -
+válaszolák - mi van akkor, ha így lemaradsz valami fontosról?"
+
+    Ez a fajta érvelés teljességgel abszurd egy digitális minimalistának.
+Számukra a legjobb digitális élet úgy érhető el, hogy gondosan megválogatják 
+eszközeiket, amelyek egyértelműen és tagadhatatlanul értéket adnak hozzá az
+életükhöz. Általában ódzkodnak minden alacsony értékkel bíró tevékenységtől,
+ami csak elvonja a figyelmüket, idejüket, és csak több kárt okoznak mint
+hasznot. Magyarán: a minimalisták nem bánják ha kihagynak apróságokat; ami 
+sokkal inkább izgatja őket, hogy esetleg valami olyan dologot hagynak ki, 
+amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
+
+                    _
+                   | |
+                   | |===( )   //////
+                   |_|   |||  | o o|
+                          ||| ( c  )                  ____
+                           ||| \= /                  ||   \_
+                            ||||||                   ||     |
+                            ||||||                ...||__/|-"
+                            ||||||             __|________|__
+                              |||             |______________|
+                              |||             || ||      || ||
+                              |||             || ||      || ||
+      ------------------------|||-------------||-||------||-||-------
+                              |__>            || ||      || ||
+      
+      
+                        hit any key to continue
+
 2021 04 02 ████████████████████████████████████████████████████████████████████
 
                     "Nincs más út, csak a rendeződés."
