the last dumbphone

--- a/log.html
+++ b/log.html
@@ -28,6 +28,154 @@
     </header>
     <main>
       <pre>
+2021 04 04 ████████████████████████████████████████████████████████████████████
+
+                              Az utolsó butatelefon
+
+    "A mai napon három forradalmian új                         ,.---
+eszközt mutatunk be" - kezdte mára már                       ,´    |
+legendássá vált bemutatóját Steve Jobs. "Az                  |___-´ 
+első egy érintőkijelzős iPod" - folytatta -       _,.----.,_   _,.----.,_
+"A második egy forradalmian új mobiltelefon.    -´          `-´          `-
+A harmadik pedig egy formabontó internet-     ,/                         _,\      
+kommunikációs eszköz." Kis hatásszünet után   ,              .--.     .-´    
+elismételte: "Tehát, egy iPod, egy            |        ,_,  |_ _||   / 
+mobiltelefon és egy internet-kommunikációs    |       :|█|  'OLO-9  | 
+eszköz. Egy iPod... egy mobiltelefon... egy   ',      \'°;  _\-'/\__ \  
+internet-kommunikációs eszköz... Értik már?    \       |-|/´  `--´   \`.  
+Ez nem három különböző eszköz."                 \      |-\ \       /  | ``/ 
+                                                 `,    \  .\        | | ,´
+    Sokan tekintenek Steve Jobsra egyfajta         `,   `´ |        | |´
+messiásként, aki látnoki vízióival                   `--__´|        |-|
+megjósolta és megalkotta a mai digitális                   |-_____--|-|
+techno-utópiánkat. Az eredeti iPhone DNS-ét      
+magában hordozza minden mai okostelefon.
+Érintőkijelző, multi-tasking, appok, GPS
+navigáció, zene streamelés, közösségi média.
+Elképesztő mennyi mindent tudott az első 
+iPhone... Az előbbi felsorolásból csupán 
+egyet.
+
+    Gyakori tévhit, hogy a jelenlegi komplex app- és közösségi média 
+ökoszisztéma egy természetes velejárója az okostelefonok elterjedésének, hiszen
+már az eredeti iPhone-ban is jelen volt. Az igazság ezzel szemben az, hogy
+még appok sem voltak. A eredeti jobsi vízió ennél sokkal de sokkal egyszerűbb.
+Steve Jobs híresen minimalista volt, az iPhone alapgondolata összefoglalható
+a már korábban idézett részlettel. Egy iPod és egy telefon. Egy iPod-telefon.
+Egy iPhone. Az internetezés funkció olyannyira harmadlagos volt, hogy a
+bemutató első 35 percében egyáltalán nem is beszél róla. Egészen odáig csak
+azt mutatja be, hogy az iPhone milyen remek iPod és milyen remek telefon.
+Jobs kifejezetten ellenezte kezdetben a harmadik féltől származó applikációkat.
+
+                                    
+                            ______________     $         __
+                    __      |())  __ __ __\             ( ( 
+                    )$)     | ||\ \ \f\f\f\\             )O)
+                   ( (      | || \ \/_/_/_/ \        __   
+                            | ||  \_______[]_\      (€(     
+                      €     |(o)) ||   ____  ||      ) )      
+                            |_____||__[____]_||                    
+
+
+
+    Az első Facebook alkalmazás előtt a felhasználóknak sokkal több kontrolljuk
+volt afelett, hogy mikor használják a közösségi oldalt. Ha rá szerettél volna
+nézni a hírfolyamodra, akkor keresned kellett egy internet eléréssel rendelkező
+számítógépet, le kellett ülnöd, és be kellett gépelned a www.facebook.com címet
+a böngészőbe. Ezt nem tudtad megcsinálni az ágyban fekve, a vécén ülve vagy a 
+metrón utazva. Csak akkor fértél hozzá a Facebookhoz, ha volt időd rá, és te is
+akartad. Az értesítések a böngészőablak bezárása után nem jutottak el hozzád.
+Egyszerűbb idők voltak.
+
+    Később a befektetők nyomására a Facebook kénytelen volt mára már bevett 
+szokásnak számító technikákat alkalmazni. A siker metrikája a felhasználók
+figyelme lett. A hírfolyam megreformálását követően a bejegyzések többé már nem
+követték az egyszerű időrendet. Azt, hogy mit és mikor lát a felhasználó
+már nem az döntötte el, hogy kiket követ, és hogy mikor íródtak a
+posztok. Komplex ajánlórendszerek vették át a szerepet, melyeknek egyetlen
+célja az, hogy a felhasználó figyelmét minél tovább lekössék. Az objektív
+közvetítő csatorna szerepet felváltotta a tartalom-kurátori szerep. Többé
+már nem döntés vagy önfegyelem kérdése, hogy mikor és mennyit használod a
+szolgáltatásaikat. Egy generáció legnagyobb elméi dolgoznak azon, hogy a pálya
+feléd lejtsen. Az okostelefonos applikációk megjelenésével és olcsó 
+mobilinternet-hozzáférésnek köszönhetően ezek a tech-óriások mindig veled
+vannak, és egész mérnökcsapatok kísérleteznek azzal, hogy mikor és milyen
+értesítéssel tudnak visszacsalogatni platformjukra.
+
+    Miért baj az, ha a figyelmünkkel fizetünk ezekért az amúgy ingyenes
+szolgáltatásokért? Két nagyon egyszerű dolog miatt. A figyelmünk egy véges
+erőforrás, egy napon belül csupán egy kis mennyiséggel gazdálkodhatunk. Ha
+figyelmünk egy jelentős részét felesleges applikációk kötik le, akkor kevesebb
+jut az igazán fontos dolgokra. A másik ok, hogy a folyamatos váltogatás
+tevékenységek között nem hatékony. Ha két, külön-külön egy-egy órás 
+tevékenységet 5 perces intervallumonként váltogatunk, akkor két óra alatt nem
+érünk a végükre, mivel a váltás után időbe telik míg újra bele tudunk mélyülni
+az adott tevékenységbe.
+
+    Ha úgy érzed, hogy a te életedre nincsenek negatív hatással ezek az appok,
+hagyd nyugodtan figyelmen kívül a következő tanácsomat. De azt tapasztalom,
+hogy az ismeretségi körömben egyre több embert frusztrál a dolog.
+
+    A tanácsom a következő: használd úgy a telefonodat, mintha az az első
+iPhone lenne. Elsődleges funkciója a telefonálás, másodlagos a zenehallgatás,
+harmadlagos az internetezés. Törölj le minden appot, ami elérhető az interneten
+is asztali böngészőből. Ez gyakorlatilag a közösségi médiák (médiumok?)
+nagyrésze. Sok Androidos telefonon gyárilag telepítve vannak ilyen appok,
+ezeket rootolás nélkül is törölni lehet az Android Debug Bus (ADB)
+segítségével. (Tutorial később.) Talán segít, ha példaként bemutatom a saját
+telefonomat.
+
+
+                               _..--------------------------------------.._   
+Összesen 15 alkalmazás        |      o             -----           (o)     |
+van telepítve rá:            |                   S/\MSUNG                   |
+                             | ____________________________________________ |
+- alap telefon funkciók,     || 10:57                                .;|█  ||
+telefon, névjegyzék, SMS     ||  _______    _______    _______    _______  ||
+                            ||| |  .-.  |  |  .--| |  | .---. |  |  ---. | ||
+- bankoláshoz szükséges     ||| |  \ /  |  |  ||   |  | |ooo| |  | / /)) | ||
+appok                       ||| | /___\ |  |  '__| |  | /-    |  | L/ L\ | ||
+                            ||| '-------'  '-------'  '-------'  '-------' ||
+- fotózáshoz szükséges       || Contacts     Phone    Messages    Revolut  ||
+appok                       |||                                            ||
+                            |||  _______    _______    _______    _______  ||
+- internet böngésző         ||| | .-"-. |  | _____ |  | _/ \_ |  | ^^  ^ | ||
+                            ||| |/ .-.()|  ||    o||  |(_\ /_)|  |( ,>(\\| |||
+- fájlkezelő                 || |\ `-´ /|  || ( ) ||  |(_/ \_)|  |\ `-´ /| |||
+                             || '-`"""´-'  '-------'  '--`-´--'  '--`"´--' |||
+- egy appáruház ha valamit   || SmartBank    Camera    Gallery    Firefox  |||
+frissíteni kell vagy         ||                                            ||
+újratelepíteni               ||  _______    _______    _______    _______  ||
+                             || |.--.__ |  | |`\.  |  | .---. |  | +   - | ||
+- óra                        || ||     ||  | |  X_>|  |/  |  \|  |       | ||
+                             || |'-----'|  | |./´  |  |\   \ /|  | x   / | ||
+- számológép                 || '-------'  '-------'  '-`---´-'  '-------' ||
+                             || My Files   Play Store   Clock    Calculator||
+- mobil-PC integráció        ||                                            ||
+                             ||  _______    _______    _______             ||
+                             || | ["v"] |  | /|\   |  | |  |  |            ||
+                             || |[,( ),]|  ||\|/|_ |  | |\K|  |            ||
+                             || | [_^_] |  | \|/ _||  | |/\|  |            ||
+                             || '-------'  '-------'  '-------'            ||
+                             || Settings   Snapseed  KDE Connect           ||
+                             ::                                            ::
+                             .'                                            ,´
+                              .                                             .
+
+    Természetesen ezt a tanácsot mindenki szabja a saját igényeire. Ahányféle 
+ember, annyiféle digitális minimalizmus. Nekem szépen lassan, egyenként 
+sikerült eliminálnom az alkalmazásaimat. Nagyjából két hónapja élek 15
+alkalmazással, és úgy érzem rengeteg időt visszanyertem ezzem. Nem csak csak a
+saját időmet, de akkumlátoridőt is. Mostanában elegendő hetente töltenem a 
+telefonomat.
+
+    Sokak úgy tekintenek az első iPhone-ra, mint az első okostelefonra. Ez több
+szempontból sem igaz. Előtte is voltak okos telefonok, mai szemmel pedig már
+eléggé butácskának számít. Lebutítani az okostelefonodat most már egyenértékű
+azzal, hogy visszatérsz az eredeti Steve Jobs vízióhoz. Ilyen módon az eredeti 
+iPhone nem az első okostelefon volt, hanem az utolső butatelefon.
+
+
 2021 04 03 ████████████████████████████████████████████████████████████████████
 
 Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
