replacing block characters with underlines

--- a/log.html
+++ b/log.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <pre>
-2021 04 04 ████████████████████████████████████████████████████████████████████
+2021 04 04 ____________________________________________________________________
 
                               Az utolsó butatelefon
 
@@ -40,7 +40,7 @@ első egy érintőkijelzős iPod" - folytatta -       _,.----.,_   _,.----.,_
 A harmadik pedig egy formabontó internet-     ,/                         _,\      
 kommunikációs eszköz." Kis hatásszünet után   ,              .--.     .-´    
 elismételte: "Tehát, egy iPod, egy            |        ,_,  |_ _||   / 
-mobiltelefon és egy internet-kommunikációs    |       :|█|  'OLO-9  | 
+mobiltelefon és egy internet-kommunikációs    |       :|_|  'OLO-9  | 
 eszköz. Egy iPod... egy mobiltelefon... egy   ',      \'°;  _\-'/\__ \  
 internet-kommunikációs eszköz... Értik már?    \       |-|/´  `--´   \`.  
 Ez nem három különböző eszköz."                 \      |-\ \       /  | ``/ 
@@ -130,7 +130,7 @@ telefonomat.
 Összesen 15 alkalmazás        |      o             -----           (o)     |
 van telepítve rá:            |                   S/\MSUNG                   |
                              | ____________________________________________ |
-- alap telefon funkciók,     || 10:57                                .;|█  ||
+- alap telefon funkciók,     || 10:57                                .;|_  ||
 telefon, névjegyzék, SMS     ||  _______    _______    _______    _______  ||
                             ||| |  .-.  |  |  .--| |  | .---. |  |  ---. | ||
 - bankoláshoz szükséges     ||| |  \ /  |  |  ||   |  | |ooo| |  | / /)) | ||
@@ -176,7 +176,7 @@ azzal, hogy visszatérsz az eredeti Steve Jobs vízióhoz. Ilyen módon az erede
 iPhone nem az első okostelefon volt, hanem az utolső butatelefon.
 
 
-2021 04 03 ████████████████████████████████████████████████████████████████████
+2021 04 03 ____________________________________________________________________
 
 Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
 
@@ -247,7 +247,7 @@ amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
       
                         hit any key to continue
 
-2021 04 02 ████████████████████████████████████████████████████████████████████
+2021 04 02 ____________________________________________________________________
 
                     "Nincs más út, csak a rendeződés."
                                       - délgörög bölcsesség 
@@ -266,7 +266,7 @@ amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
 erőd ahhoz, hogy megvalósítsd az álmaidat, hogy teszel azért, hogy neked jobb
 legyen. Már nem aggódom érted. Már nem aggódom magamért.
 
-2021 04 02 ████████████████████████████████████████████████████████████████████
+2021 04 02 ____________________________________________________________________
 
     Támadt egy olyan remek ötletem, hogy elkezdek naplót írni. Ez ugye 
 hagyományosan úgy nézne ki, hogy fogok egy üres spirálfüzetet az
