--- a/log.html
+++ b/log.html
@@ -5,7 +5,7 @@
     <title>LOG.HTML</title>
     <style>
       body {
-        width: 600px;
+        width: fit-content;
         background-color: rgb(231, 231, 231);
         color: rgba(0, 0, 0, 0.692);
         margin: auto;
@@ -37,7 +37,7 @@ eszközt mutatunk be" - kezdte mára már                       ,´    |
 legendássá vált bemutatóját Steve Jobs. "Az                  |___-´ 
 első egy érintőkijelzős iPod" - folytatta -       _,.----.,_   _,.----.,_
 "A második egy forradalmian új mobiltelefon.    -´          `-´          `-
-A harmadik pedig egy formabontó internet-     ,/                         _,\      
+A harmadik pedig egy formabontó internet-     ,/                         _,\  
 kommunikációs eszköz." Kis hatásszünet után   ,              .--.     .-´    
 elismételte: "Tehát, egy iPod, egy            |        ,_,  |_ _||   / 
 mobiltelefon és egy internet-kommunikációs    |       :|_|  'OLO-9  | 
@@ -182,10 +182,10 @@ Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
 
    _____________________              Digitális Minimalizmus
   /                 `   \             
-  |  .-----------.  |   |-----.           Egy technológia használati filozófia,    
+  |  .-----------.  |   |-----.           Egy technológia használati filozófia,
   |  |           |  |   |-=---|       melyben az online töltött idődet kevés,  
   |  |  MINIMAL  |  |   |-----|       gondosan kiválasztott és optimalizált    
-  |  |           |  |   |-----|       tevékenységgel hasznosítod, olyanokkal             
+  |  |           |  |   |-----|       tevékenységgel hasznosítod, olyanokkal   
   |  |           |  |   |-----|       melyek általad fontosnak vélt értékeket 
   |  `-----------'  |   |-----'/\     támogatnak, és aztán boldogan lemondasz 
    \________________/___'     /  \    minden másról.
@@ -293,7 +293,7 @@ megvolt.
 
     Személyes blogom legyen oltára, a maga puritánságával, ennek az 
 egyszerűségnek. Egy statikus HTML oldal, ami .txt fájlnak hazudja magát, de
-időnként nem riad meg attól sem, ha képet kell illeszteni két szövegblokk közé. 
+időnként nem riad meg attól sem, ha képet kell illeszteni két szövegblokk közé.
 Egy digitális megfelelője a firka füzetemnek. 
       </pre>
     </main>
