fixing css erros

--- a/log.html
+++ b/log.html
@@ -5,6 +5,7 @@
     <title>LOG.HTML</title>
     <style>
       body {
+        width: -moz-fit-content;
         width: fit-content;
         background-color: rgb(231, 231, 231);
         color: rgba(0, 0, 0, 0.692);
