--- a/log.html
+++ b/log.html
@@ -29,7 +29,10 @@
     </header>
     <main>
       <pre>
-2021 04 04 ____________________________________________________________________
+CTRL-F : #diary #digital_minimalism
+      </pre>
+      <pre>
+2021 04 04 ________________________________________________ #digital_minimalism
 
                               Az utolsó butatelefon
 
@@ -177,7 +180,7 @@ azzal, hogy visszatérsz az eredeti Steve Jobs vízióhoz. Ilyen módon az erede
 iPhone nem az első okostelefon volt, hanem az utolső butatelefon.
 
 
-2021 04 03 ____________________________________________________________________
+2021 04 03 ________________________________________________ #digital_minimalism
 
 Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
 
@@ -248,7 +251,7 @@ amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
       
                         hit any key to continue
 
-2021 04 02 ____________________________________________________________________
+2021 04 02 _____________________________________________________________ #diary
 
                     "Nincs más út, csak a rendeződés."
                                       - délgörög bölcsesség 
