--- a/log.html
+++ b/log.html
@@ -169,7 +169,7 @@ frissíteni kell vagy         ||                                            ||
     Természetesen ezt a tanácsot mindenki szabja a saját igényeire. Ahányféle 
 ember, annyiféle digitális minimalizmus. Nekem szépen lassan, egyenként 
 sikerült eliminálnom az alkalmazásaimat. Nagyjából két hónapja élek 15
-alkalmazással, és úgy érzem rengeteg időt visszanyernem ezzel. Nem csak csak a
+alkalmazással, és úgy érzem rengeteg időt visszanyertem ezzel. Nem csak csak a
 saját időmet, de akkumlátoridőt is. Mostanában elegendő hetente töltenem a 
 telefonomat.
 
