new diary entry and added more line between posts

--- a/log.html
+++ b/log.html
@@ -32,6 +32,22 @@
 CTRL-F : #diary #digital_minimalism
       </pre>
       <pre>
+2021 04 07 _____________________________________________________________ #diary
+
+    Végeztem mára a munkával, nincs már semmi dolgom. Ittam egy zöldteát, és
+meditáltam. Odakint fúj a szél és süt a nap, a résnyire nyitott ablakon át 
+lágy, hűvös szellő kering a naplemente színeivel kifestett szobámban. 
+Elindítottam egy chilles Spotify lejátszási listát, és közben azon gondolkozom, 
+hogy megint boldog vagyok. Hogyan is élhettem eddig másként?
+
+
+
+
+
+
+
+
+
 2021 04 05 ________________________________________________ #digital_minimalism
 
                               Az utolsó butatelefon
@@ -180,6 +196,12 @@ azzal, hogy visszatérsz az eredeti Steve Jobs vízióhoz. Ilyen módon az erede
 iPhone nem az első okostelefon volt, hanem az utolső butatelefon.
 
 
+
+
+
+
+
+
 2021 04 03 ________________________________________________ #digital_minimalism
 
 Részlet Cal Newport Digital Minimalism című könyvéből, saját fordítás.
@@ -251,6 +273,13 @@ amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
       
                         hit any key to continue
 
+
+                        
+
+
+
+
+
 2021 04 02 _____________________________________________________________ #diary
 
                     "Nincs más út, csak a rendeződés."
@@ -269,6 +298,13 @@ amiről pontosan tudják, hogy a jó élethez elengedhetetlen.
     Örülök, hogy jobban vagy. Örülök, hogy én jobban vagyok. Örülök, hogy van 
 erőd ahhoz, hogy megvalósítsd az álmaidat, hogy teszel azért, hogy neked jobb
 legyen. Már nem aggódom érted. Már nem aggódom magamért.
+
+
+
+
+
+
+
 
 2021 04 02 ____________________________________________________________________
 
