--- a/log.html
+++ b/log.html
@@ -29,9 +29,48 @@
     </header>
     <main>
       <pre>
-CTRL-F : #diary #digital_minimalism
+CTRL-F : #diary #digital_minimalism #rant
       </pre>
       <pre>
+2021 07 25 ______________________________________________________________ #rant
+
+Tippek randiappos profilhoz:
+
+1.  Ha annyira nincs identitásod, hogy a legfőbb dolog amit ki tudsz emelni
+    magaddal kapcsolatban, az a csillagjegyed vagy a Myers-Briggs típus
+    indikátorod, akkor inkább ne írj ki semmit. Nem az alapján fognak téged
+    megismerni jobban, hogy mikor születtél, vagy mit hozott ki egy online 
+    teszt, amit a budin ülve töltöttél ki.
+
+2.  A bemutatkozásnak rólad kell szólnia, semmi másról. Tehát ne ezt a 
+    felületet használd panaszkodásra, különben csak annyit fognak látni belőled
+    az emberek, hogy egy nagy rinyagép vagy.
+
+3.  Nem az ókori Egyiptomban vagyunk, ne számíts arra, hogy az emodzsi falat,
+    amit a profilodra hánysz bárki is megpróbálja majd megfejteni. Használj
+    inkább rövid, tömör mondatokat, címszavakat.
+
+4.  Ha képen nem tetszel valakinek, akkor élőben sem fogsz. Mindenképpen olyan
+    képeket rakj ki, amin teljes egészedben látszol. Nem tükörben lőtt szelfit,
+    amin a telefon mögé bújsz, nem sznepcset filteres képet, nem félhomályos,
+    sötétben lőtt feketefehér képet. Kínosabb ha első randin kell csalódnia a
+    másiknak. Lehet hogy kevesebb meccsed lesz, de legalább nekik tényleg 
+    tetszel.
+
+5.  Nem egy árucikk vagy! Senkit nem érdekel, hogy hány centi vagy (bárhol), 
+    hány kiló, mennyi a testzsír százalékod vagy az IQ-d. Ha az előző pontot
+    betartod, akkor ezek kiderülnek a képeid alapján vagy az első beszélgetés
+    során. Ha kapcsolat a cél, akkor ilyeneket semmiképp se írj ki, felszínes.
+
+* drops mic *
+
+
+
+
+
+
+
+
 2021 04 07 _____________________________________________________________ #diary
 
     Végeztem mára a munkával, nincs már semmi dolgom. Ittam egy zöldteát, és
