--- a/bdstudio.html
+++ b/bdstudio.html
@@ -16,6 +16,8 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5728441528961089"
+     crossorigin="anonymous"></script>
     </head>
     <body id="page-top">
 
