--- a/bdstudio.html
+++ b/bdstudio.html
@@ -44,7 +44,7 @@
                         <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text small mb-0" style="color: white">Copyright &copy; Your Website 2023</p>
+                <p class="text small mb-0" style="color: white">Copyright &copy; Eszes Bálint 2023</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
