--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QP3VW8PL3H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QP3VW8PL3H');
+</script>
+
 <pre>
 Hello World!
 </pre>
