--- a/_pages/bdstudio.html
+++ b/_pages/bdstudio.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-permalink: /bdstudio/
+permalink: /bdstudio
 title: "BDStudio"
 excerpt: "This is a page not in th emain menu"
 author_profile: false
