Added seo tags and Google Search Console verification tag

--- a/_pages/bdstudio.html
+++ b/_pages/bdstudio.html
@@ -1,8 +1,9 @@
 ---
 layout: splash
 permalink: /bdstudio
-title: "BDStudio"
-excerpt: "This is a page not in th emain menu"
+title: "BDStudio - a 3D editor and command generator for Minecraft display entities"
+excerpt: "BDStudio is a 3D editor and command generator for Minecraft display entities."
+description: "BDStudio is a 3D editor and command generator for Minecraft display entities.It enables you to bring custom 3D models into your Minecraft worlds without the use of mods or resource packs. With this tool, you have complete creative control over an otherwise rigid, blocky world. It has a user friendly UI, and all the necessary 3D modelling and editing tools to create anything you could envision."
 author_profile: false
 
 
