--- a/bdstudio/index.html
+++ b/bdstudio/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       // Redirect to the current location of BDStudio
-      window.location.replace("./editor");
+      window.location.replace("/bdstudio");
     </script>
   </head>
   <body>
