New video by Skip the Tutorial

--- a/_pages/bdstudio.html
+++ b/_pages/bdstudio.html
@@ -31,6 +31,7 @@ and editing tools to create anything you could envision.
 <div style="padding: 32px;">
   <h2>Videos showcasing BDStudio</h2>
   <div style="display: flex; flex-wrap: wrap; width: 100%;">
+    <a href="https://youtu.be/5BmbTrRbapU?t=427" style="max-width: 50%; padding: 4px;"><img src="https://i.ytimg.com/vi/5BmbTrRbapU/maxresdefault.jpg"></a>
     <a href="https://www.youtube.com/watch?v=aYi5wnCOXm4" style="max-width: 50%; padding: 4px;"><img src="https://i.ytimg.com/vi/aYi5wnCOXm4/maxresdefault.jpg"></a>
     <a href="https://www.youtube.com/watch?v=n3Z11rnPPRc" style="max-width: 50%; padding: 4px;"><img src="https://i.ytimg.com/vi/n3Z11rnPPRc/maxresdefault.jpg"></a>
     
